tests/invalid/bad_origin.s
  nop
  nop
  nop
  nop
.origin 0
  nop
  nop